# s3-cli-tool-assignment

./: .gitignore  README.md  pyproject.toml  s3_delete_tool.py  s3_file_organizer.py  s3_versioning_tool.py
s3_cli_tool/: main.py
